Fix logo shift at navigation bar hide

--- a/source/assets/stylesheets/_main.scss
+++ b/source/assets/stylesheets/_main.scss
@@ -47,6 +47,11 @@
 // The following styling hides the navigation bar at widths below 788px similarly to Foundation's '.hide-for-small'.
 // This should be fixed with the addition to the social-media-section and/or mobile-nav.
 @media (max-width: 787px) {
+  // For some reason the logo would shift up 1px after the navigation bar would hide.
+  #logo {
+    margin-top: 13px;
+  }
+
   #top-nav {
     display: none;
   }
